# ai-stock-report

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  hello.py  pyproject.toml  streamlit_app.py
.github/workflows/: deploy.yml
app/: __init__.py  config.py  dependencies.py  main.py  orchestrator.py  schemas.py
app/agents/: base.py  report.py  research.py
app/models/: __init__.py  report.py  stock.py
app/routers/: __init__.py  reports.py
app/services/: __init__.py  chart_builder.py  gemini_client.py  job_store.py  pdf_generator.py
app/tools/: __init__.py  fundamentals.py  market_data.py  news.py  sec_filings.py  ticker_resolve.py
infra/: deploy.sh  ecs-task-api.json  ecs-task-streamlit.json
