[project]
name = "ai-stock-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # api / server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # http
    "httpx>=0.27.0",
    # ui
    "streamlit>=1.37.0",
    # llm
    "google-genai>=1.5.0",
    # market data
    "yfinance>=0.2.55",
    # news rss
    "feedparser>=6.0.11",
    # charts
    "matplotlib>=3.9.0",
    # pdf
    "reportlab>=4.2.0",
    # pillow needed by reportlab for image embedding
    "pillow>=10.4.0",
]

[project.scripts]
ai-stock-report-api = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true
